invidious/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: invidious-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`invidious.durp.info`) && PathPrefix(`/`)
    middlewares:
    - name: whitelist
      namespace: traefik
    kind: Rule
    services:
    - name: invidious-invidious
      port: 3000
  tls:
    secretName: invidious-tls

---

kind: Service
apiVersion: v1
metadata:
  name: invidious-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: invidious.durp.info
spec:
  type: ExternalName
  externalName: durp.info
